Feat : Added Flex Text Banner and Categories Widget (#14)
* Feat : Added Flex Text Banner and Categories Widget

* Fixed FLutter anaylyse issues

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_localizations:
     sdk: flutter
+  marquee: ^2.3.0
 
 dev_dependencies:
   flutter_test:
