--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   marquee: ^2.3.0
+  go_router: ^14.3.0
 
 dev_dependencies:
   flutter_test:
